[SPARK-54007][CORE][SQL] Use Java `Set.of` instead of `Collections.emptySet`